--- a/src/zappa_settings.json.example
+++ b/src/zappa_settings.json.example
@@ -1,7 +1,12 @@
 {
     "dev": {
-	"s3_bucket": "chose your unique bucket name",
-	"app_function": "app.app",
-	"role_name": "you might need to define a role here"
+        "s3_bucket": "chose your unique bucket name",
+        "app_function": "app.app",
+        "aws_region": "ap-southeast-2",
+        "environment_variables": {
+            "DEBUG": "True",
+            "GITHUB_USER": "john-smith",
+            "GITHUB_PSX": "some-personal-generated-token"
+        }
     }
 }
